# wavz

./: .gitignore  Cargo.toml  README.md  RUN.md  rustfmt.toml
src/: audio_vis.rs  complex.rs  demos.rs  fft.rs  graphics.rs  lib.rs  main.rs  mic.rs  mic_vis.rs  mmap_vis.rs  parser.rs  player.rs  precomp.rs  precomp_vis.rs  realtime.rs  rgba.rs  static_vis.rs
